--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,6 @@
 
     <div class ="Home_Main_Content">
+        <h1 class = "header_email-content"> Welcome {{send}}</h1>
         <h1 class = "header_main_content">How it Works: </h1>
             <div class = "grid-container">
                 <div>
