Added dashboard change if validation form success

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,8 @@
 
     <div class ="Home_Main_Content">
-
-        <h1 class = "header_email-content"> Welcome {{this}}</h1>
-
+        <h1 class = "header_main_content"> Welcome ${{send}}</h1>
+        <br>
+        <br>
         <h1 class = "header_main_content">How it Works: </h1>
             <div class = "grid-container">
                 <div>
