--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,6 +1,6 @@
 
     <div class ="Home_Main_Content">
-        <h1 class = "header_main_content"> Welcome ${{send}}</h1>
+        <h1 class = "header_main_content">Welcome {{send}}</h1>
         <br>
         <br>
         <h1 class = "header_main_content">How it Works: </h1>
